# agent_monorepo

./: .gcloudignore  .gitignore  .gitleaks.toml  README.md
analytics-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
analytics-platform/analytics_platform/: config.py  gcp_config.py
analytics-platform/dbt/: dbt_project.yml  profiles.yml
analytics-platform/scripts/: demo_emit.py  deploy_orchestration.sh  docker_entrypoint.sh  gcp_bootstrap.sh  run_etl.sh
analytics-platform/terraform/: README.md  artifact_registry.tf  bigquery.tf  gcs.tf  iam.tf  locals.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
analytics-platform/tests/: conftest.py  test_analytics_logger.py  test_cloud_workflow.py  test_content.py  test_content_gcs.py  test_context.py  test_dbt_cross_db.py  test_dbt_integration.py  test_file_sink.py  test_gcp_config.py  test_gcs_transport.py  test_hashing.py  test_local_uploader.py  test_schemas.py  test_terraform.py  test_tracer.py
analytics-platform/workflows/: dbt_pipeline.yaml
driving-license-bot/: .env.example  .env.secrets.example  .gitignore  .mcp.json  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
driving-license-bot/app/: __init__.py  config.py  main.py
driving-license-bot/docs/: BACKUP_RESTORE.md  DATA_SOURCES.md  DEPLOY.md  DESIGN.md  INFRASTRUCTURE.md  INFRA_DECISIONS.md  INTEGRATIONS.md  PHASE2_PLAN.md  SETUP.md  VERTEX_ENABLEMENT.md
driving-license-bot/review_admin_ui/: __init__.py  auth.py  config.py  main.py  services.py
driving-license-bot/scripts/: backup_data.sh  bootstrap_gcp.sh  deploy_batch.sh  generate_question.py  init_question_bank_schema.py  provision_rich_menu.py  push_line_secrets.sh  restore_data.sh  run_batch.py  run_pipeline.py  teardown.sh  teardown_app.sh  verify_egov_connectivity.py  verify_mcp_proxy.sh  verify_question_bank.py  verify_vertex_models.py
driving-license-bot/terraform/: .gitignore  .terraform.lock.hcl  README.md  admin_ui.tf  apis.tf  artifact_registry.tf  backup_bucket.tf  batch.tf  cloud_run.tf  cloudsql.tf  firestore.tf  iam.tf  iap.tf  locals.tf  outputs.tf  scheduler.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf  workflows.tf
driving-license-bot/tests/: conftest.py  test_analytics_events.py  test_bank_backed_pool.py  test_batch_plan.py  test_command_router.py  test_egov_law_client.py  test_embedding.py  test_fact_checker.py  test_firestore_repos.py  test_generation_runner.py  test_identity.py  test_pipeline.py  test_pipeline_dedup.py  test_proxied_http_client.py  test_quality_reviewer.py  test_question_bank.py  test_question_bank_status_ops.py  test_question_generator.py  test_question_pool.py  test_question_repo.py  test_scoring.py  test_webhook.py
driving-license-bot/workflows/: generation_pipeline.yaml
hotcook-agent/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
hotcook-agent/app/: config.py  main.py
hotcook-agent/scripts/: seed_menu_catalog.py
hotcook-agent/tests/: conftest.py  test_ingredient_resolver.py  test_menu_catalog.py  test_recipe_suggester.py  test_routes.py  test_seed_script.py
kanie-lab-agent/backend/: config.py  main.py  pyproject.toml
lifeplanner-agent/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
lifeplanner-agent/app/: config.py  main.py
lifeplanner-agent/scripts/: integration_check_observability.py  setup_rich_menu.py
lifeplanner-agent/tests/: conftest.py  test_advisor.py  test_anomalies.py  test_category_mapper.py  test_chat_compare_api.py  test_csv_importer.py  test_csv_importer_canonical.py  test_encoding.py  test_event_catalog.py  test_event_housing.py  test_event_vehicle.py  test_health.py  test_instrumentation.py  test_line_liff.py  test_line_webhook.py  test_llm_client.py  test_money.py  test_networth_api.py  test_profile_api.py  test_repository_transaction.py  test_route_observability.py  test_routes_api.py  test_scenario_comparer.py  test_scenarios_api.py  test_setup_rich_menu.py  test_simulator.py  test_summary.py  test_tax_jp.py
llm-client/: README.md  pyproject.toml
llm-client/llm_client/: __init__.py  _emit.py  _response.py  _system_payload.py  analytics.py  anthropic_client.py  mock.py  protocol.py  types.py  vertex_client.py
llm-client/tests/: conftest.py  test_client.py
piyolog-analytics/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
piyolog-analytics/alembic/: README.md  env.py
piyolog-analytics/app/: config.py  main.py
piyolog-analytics/docs/: design.md
piyolog-analytics/scripts/: bootstrap_gcp.sh  deploy_cloud_run.sh
piyolog-analytics/terraform/: .gitignore  README.md  artifact_registry.tf  cloud_sql.tf  cloudbuild-drift.yaml  cloudbuild-plan.yaml  iam.tf  locals.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
piyolog-analytics/tests/: conftest.py  test_analytics.py  test_event_repo.py  test_line_webhook.py  test_parser.py  test_terraform.py
security-platform/: .gitignore  Makefile  README.ja.md  README.md  pyproject.toml
security-platform/.promptfoo/: redteam.yaml
security-platform/config/: .env.example  inventory.yaml  notification.yaml  scan.yaml
security-platform/infra/: Dockerfile.proxy
security-platform/scripts/: redteam.sh  scan-mcp.sh  scan-skills.sh  setup-cron.sh
security-platform/src/: __init__.py  config.py
security-platform/tests/: conftest.py
stock-analysis-agent/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
stock-analysis-agent/app/: config.py  main.py
stock-analysis-agent/scripts/: integration_check_observability.py
stock-analysis-agent/tests/: conftest.py  test_fund_screener.py  test_health.py  test_instrumentation.py  test_line_webhook.py  (+5 more)
tech-news-agent/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
(+354 files in other folders)
