[project]
name = "driving-license-bot"
version = "0.1.0"
description = "LINE Bot for car driving license written test practice (provisional / full)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "line-bot-sdk>=3.11.0",
    # Vertex AI Claude (Anthropic SDK は Vertex バックエンドをサポート)
    "anthropic[vertex]>=0.40.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-tasks>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    # Analytics platform (path dep) for OTel + AnalyticsLogger
    "analytics-platform",
]

[project.optional-dependencies]
# 本番（GCS / BigQuery 駆動）。analytics-platform 側の `[gcs]` extra も
# 明示的に有効化することで、path source 経由で GCS 依存が確実に引き継がれる。
gcs = [
    "analytics-platform[gcs]",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.25.0",
]

[tool.uv.sources]
analytics-platform = { path = "../analytics-platform" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.4.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
