[project]
name = "stock-analysis-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "rapidfuzz>=3.0.0",
    "claude-agent-sdk",
    "mplfinance>=0.12.9b0",
    "matplotlib>=3.9.0",
    "line-bot-sdk>=3.13",
    # `[gcs]` extra で google-cloud-storage を入れる。
    # ANALYTICS_STORAGE_BACKEND=gcs のとき GCSPayloadWriter / GCSTransport が import される。
    "analytics-platform[gcs]",
]

[tool.uv.sources]
analytics-platform = { path = "../analytics-platform" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.4.0",
    "httpx>=0.27.0",
]
